# typst_linalg

./: .gitignore  Cargo.toml  README.md  run.sh
examples/linalg/: .gitignore  Cargo.toml  hello.typ  lib.typ  linalg.wasm  run.sh
examples/linalg/src/: lib.rs  main.rs  matrix.rs
pkg/: bad.typ  game.typ  lib.typ  main.typ
src/: common.rs  convert.rs  lib.rs  main.rs  matrix.rs  vector.rs
