[package]
name = "linalg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linalg-bin"
path = "src/main.rs"

[lib]
name = "linalg"
crate-type = ["cdylib"]

[dependencies]
fraction = "0.15.3"
num = "0.4.3"
num-traits = "0.2.19"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git", version = "0.1.0" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace
